assets/scss/elements/testimonial.scss
/************************************************************************
*  Testimonial  css
************************************************************************/

.wk-testimonial{
	.wk-card{
	    transition:all 0.3s ease;
		.wk-card-body{
			
			.wk-text-normal{
			   font-size:20px;
			   margin-bottom:30px;
			}

			.wk-card-title{
				font-size:28px;
				margin:-5px 0 !important;
				a{
					color:#1379fe;
				}
			}
			.wk-text-meta{
				font-size:12px;
				
			}
		}
		&:hover{
		    transition:all 0.3s ease;
		}

	}
	.wk-slide-nav{
		.wk-icon{
			color:#ddd;
			width:40px;
			height:40px;
			line-height:60px;
			text-align:center;
			border-radius:50px;
		}
	}

	.wk-testimonial-1{
		border:2px dashed #ddd;
		background:transparent;
		.wk-card-media-top{
			padding-bottom:30px;
			img{width:15%;padding:3px; display:inline-block;}
		}
		.wk-card-media-bottom{
			padding-bottom:20px;
			img{width:15%;padding:3px; display:inline-block;}
		}
		.wk-card-body{
			.wk-text-meta.right{
				margin-left:15px;
			}
		}
	}

	.wk-testimonial-2{
		background:transparent;
		.wk-card-media-top{
			padding-bottom:30px;
			img{width:15%;padding:3px; display:inline-block;}
		}
		.wk-card-media-bottom{
			padding-bottom:20px;
			img{width:15%; padding:3px;}
		}
		.wk-card-body{
			.wk-text-normal{
				padding:20px 0;
			}
			.wk-card-title{
			}
			.wk-text-meta.right{
				margin-left:15px;
			}
		}
	}

	.wk-testimonial-3{
		background:transparent;
		.wk-card-media-left{
			padding-bottom:30px;
			max-height:450px;
		    overflow:hidden;
			img{width:100%;}
		}
		.wk-card-media-right{
			padding-top:30px;
			max-height:450px;
			overflow:hidden;
			img{width:100%;}
		}
		.wk-card-body{
			.wk-card-title{
				
			}
			.wk-text-meta.right{
				margin-left:15px;
			}
		}
	}

	.wk-testimonial-4{
		background:#fff;
		box-shadow:1px 1px 10px rgba(0, 0, 0, 0.04);
		transition:all 0.3s ease;
		text-align:center;
		margin:5px;
		&:hover{
		  transition:all 0.3s ease;
		  background:#ff6238;
		}
		
		.wk-card-media-top{
			padding-bottom:30px;
			img{width:15%; padding:3px;}
		}
		.wk-card-media-bottom{
			padding-bottom:20px;
			img{width:15%;padding:3px; display:inline-block;}
		}
		.wk-card-body{
			.quote {
			    left: 0;
			    right: 0;
			    top: 45px;
			    text-align: center;
			    svg{
			        width: 80px;
				    height: 80px;
				    fill: #efefef;
			    }
			}
		}
	}

	.wk-testimonial-5{
		background:#fff;
		box-shadow:1px 1px 10px rgba(0, 0, 0, 0.04);
		border-radius:10px;
		transition:all 0.3s ease;
		opacity:0.5;
		margin:5px;
		.wk-card-media-left, .wk-card-media-right{
			img{border:1px dotted #ddd; padding:5px; border-radius:50px;}
		}
		.wk-card-body{
			.quote {
			    left: 20px;
			    top: 20px;
			    text-align: left;
			    svg{
			        width: 80px;
				    height: 80px;
				    fill: #efefef;
			    }
			}
		}
	}

	.wk-active{
		.wk-testimonial-5{
			opacity:1;
		}

	}

	.wk-dotnav > li{
	    border: 1px solid rgba(0,0,0,.5);
	    margin: 2px;
	    text-align: center;
	    padding: 2px;
	    border-radius: 50px;
	    a{
	    	border-radius:50px;
	    }
	}


}

